--- a/css/resume.css
+++ b/css/resume.css
@@ -89,6 +89,7 @@
 
 .resume-section-title {
   font-family: "Merriweather", serif;
+  font-weight: bold;
   color: #333333;
   padding: 10px 0 0 0;
 }
@@ -103,7 +104,7 @@
   color: white;
   background-color: #303841;
   font-size: 14.5px;
-  padding: 3% 4% 3% 3%;
+  padding: 3.5% 4% 3% 3%;
   text-align: right;
 }
 
